# otus_cpp_prof_hw11

./: README.md  client.py
.github/workflows/: cmake-multi-platform.yml
source/: CMakeLists.txt  database.cpp  database.h  main.cpp  main.h  network_handler.cpp  network_handler.h  os_interface.h  parser.cpp  parser.h  session.cpp  session.h  settings.cpp  settings.h
